
  [ Dmitry Shachnev ]
  * New upstream release.
  * Drop CVE-2022-25255.diff, included in the new release.
  * Refresh other patches.
  * Bump ABI version to qtbase-abi-5-15-9.
  * Update debian/copyright using debian/scripts/update-copyright.
  * Fix use of transitional packages in Build-Depends:
    - libfontconfig1-dev => libfontconfig-dev
    - libfreetype6-dev => libfreetype-dev

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 13 Apr 2023 20:25:28 +0300

qtbase-opensource-src (5.15.8+dfsg-7) unstable; urgency=medium

  * Update a11y_root.diff. This time the code waits for Qt loop to process the
    check (Closes: #1033995, #1034160, #1034271).

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 12 Apr 2023 20:24:34 -0300

qtbase-opensource-src (5.15.8+dfsg-6) unstable; urgency=medium

  * Use the new, fixed version of a11y_root.diff from Samuel Thibault
    (again closes: #1033995).

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 11 Apr 2023 14:25:22 +0300

qtbase-opensource-src (5.15.8+dfsg-5) unstable; urgency=medium

  * Revert the last upload. Unfortunately, it caused regressions
    (closes: #1034160, #1034169, #1034191).

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 10 Apr 2023 23:58:16 +0300

qtbase-opensource-src (5.15.8+dfsg-4) unstable; urgency=medium

  * Add a patch to fix accessibility on XCB when running as root
    (closes: #1033995).

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 09 Apr 2023 21:23:36 +0300

qtbase-opensource-src (5.15.8+dfsg-3) unstable; urgency=medium

  * Use ${DEB_HOST_GNU_TYPE} substitution in debian/qt5-qmake.install.
  * Add upstream patch to fix denial-of-service in Qt SQL ODBC plugin
    (CVE-2023-24607, closes: #1031872).
  * Update debian/libqt5gui5.symbols from s390x build log.
  * Amend image_deletion_order.diff from one more upstream commit.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 27 Feb 2023 11:28:53 +0300
