@@ -13,6 +13,7 @@ fix_alt_backtick.diff
 image_deletion_order.diff
 qxcbwindow_set_geometry.diff
 CVE-2023-24607.diff
+a11y_root.diff
 
 # Debian specific.
 gnukfreebsd.diff
@@ -28,4 +29,3 @@ qstorageinfo_linux.diff
 cross_build_mysql.diff
 cast_types_for_egl_x11_test.diff
 revert_startBlocking_removal.diff
-a11y_root.diff
