@@ -9,6 +9,7 @@ qtbase-opensource-src (5.15.9+dfsg-1) UNRELEASED; urgency=medium
   * Fix use of transitional packages in Build-Depends:
     - libfontconfig1-dev => libfontconfig-dev
     - libfreetype6-dev => libfreetype-dev
+  * Update a11y_root.diff to the version which was applied upstream.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 13 Apr 2023 20:25:28 +0300
 
